New titles + layout and fixed decimal place

--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
                 </section>
                 </div>
             <div class="section">
+                <h3 class = "text-light">Mass</h3>
                 <section class="inputs">
                     <input type="number" name="grams" id="grams" class="input" placeholder="Grams">
                     <input type="number" name="ounces" id="ounces" class="input" placeholder="Ounces">
