Added feet and meters conversion

--- a/index.html
+++ b/index.html
@@ -37,6 +37,13 @@
                     <input type="number" name="ounces" id="ounces" class="input" placeholder="Ounces">
                 </section>
             </div>
+            <div class="section">
+                <h3 class = "text-light">Distance</h3>
+                <section class="inputs">
+                    <input type="number" name="feet" id="feet" class="input" placeholder="Feet">
+                    <input type="number" name="meter" id="meter" class="input" placeholder="Meter">
+                </section>
+            </div>
        </div>
     </main>
     <script src="main.js"></script>
