--- a/index.html
+++ b/index.html
@@ -44,6 +44,13 @@
                     <input type="number" name="meter" id="meter" class="input" placeholder="Meter">
                 </section>
             </div>
+            <div class="section">
+                <h3 class = "text-light">Volume</h3>
+                    <section class="inputs">
+                        <input type="number" name="mL" id="mL" class="input" placeholder="mL">
+                        <input type="number" name="oZ" id="oZ" class="input" placeholder="oZ">
+                    </section>
+            </div>
        </div>
     </main>
     <script src="main.js"></script>
